--- a/first-project/index.html
+++ b/first-project/index.html
@@ -65,6 +65,49 @@
                     <label for=""> 
                         <input type="radio" name="source" value="freidens"class="inputradio" checked>TV</label>
     </div>
+    <div class="form-group">
+        <p class="quest">Wolud you like to see improved</p>
+        <label for="">
+            <input type="checkbox"
+            name="prefer" class="checkbox"
+            value="back-end-dev">
+            Back-end Developer
+        </label>
+
+        <label for="">
+            <input type="checkbox"
+            name="prefer" class="checkbox"
+            value="back-end-dev">
+            Android engineer
+        </label>
+        <label for="">
+            <input type="checkbox"
+            name="prefer" class="checkbox"
+            value="back-end-dev">
+            Software engineer
+        </label>
+        <br> <br>
+        <label for="">
+            <input type="checkbox"
+            name="prefer" class="checkbox"
+            value="app-dev">
+            Front end developer
+        </label>
+        <label for="">
+            <input type="checkbox"
+            name="prefer" class="checkbox"
+            value="back-end-dev">
+            Other
+        </label>
+    </div>
+    <div class="form-group">
+        <p id="quest">Give us Yor feedback</p>
+        <textarea name="feedback" id="feedback" cols="30" rows="7" class="textarea"></textarea>
+    
+    </div>
+    <div class="form-group">
+        <button type="submit">Submit</button>
+    </div>
 
 </form>
 </body>
