--- a/first-project/index.html
+++ b/first-project/index.html
@@ -106,7 +106,7 @@
     
     </div>
     <div class="form-group">
-        <button type="submit">Submit</button>
+        <button type="submit" class="btn">Submit</button>
     </div>
 
 </form>
