--- a/first-project/index.html
+++ b/first-project/index.html
@@ -11,7 +11,7 @@
     <div class="container ">
         <header class="header">
             <h1 id="title">
-                Survey from WEBHUB
+                Survey form basic
             </h1>
             <p id="description">
                 Thank you for taking the time to help us to improve the plateform
