--- a/second-project/index.html
+++ b/second-project/index.html
@@ -15,7 +15,7 @@
             </div>
             <ul>
                 <li>
-                    <a href="#">Main page</a>
+                    <a href="#" class="aktif">Main page</a>
                 </li>
                 <li>
                     <a href="#">About</a>
@@ -30,6 +30,14 @@
                     <a href="#">iLETISIM</a>
                 </li>
             </ul>
+        </div>
+        <div class="center">
+            <h1>BASIC WEB SITE</h1>
+            <h2>WELCOME</h2>
+            <div class="buttons">
+                <button>more ...</button>
+                <button>abone ol!</button>
+            </div>
         </div>
     </div>
     
