--- a/sixth-project/index.html
+++ b/sixth-project/index.html
@@ -13,28 +13,34 @@
 <body>
     <header class="header">
         <a href="#" class="logo">
-            <img src="./img/960x505-nefis-lezzetiyle-kakaolu-cupcake-tarifi-cupcake-nasil-yapilir-1584004132639.png" alt="logo">
+            <img src="" alt="logo">
         </a>
         <nav class="navbar">
-            <a href="" >HOME</a>
+            <a href="">HOME</a>
             <a href="" >ABOUT</a>
             <a href="" >MENU</a>
             <a href="" >PRODUCTS</a>
             <a href="" >REWIEW</a>
             <a href="" >CONTACT</a>
-            <a href="">BLOgS</a>
+            <a href="">BLOGS</a>
         </nav>
         <div class="buttons">
             <button>
-                <i class="fa-light fa-house">
+                <i class="fas fa-search">
 
                 </i>
             </button>
             <button>
-                <i class="fas fa-shopping-card">
+                <i class="fas fa-shopping-cart">
 
                 </i>
             </button>
+            <button>
+                <i class="fas fa-bars">
+
+                </i>
+            </button>
+
         </div>
 
     </header>
